basic etl for 311

--- a/.gitignore
+++ b/.gitignore
@@ -64,5 +64,8 @@ docs/_build/
 # PyBuilder
 target/
 
+#####=== IPythonNotebook ===#####
+# Temporary data
+.ipynb_checkpoints/
 
 blight_risk_prediction/architecture.png
