--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 #### project-local gitignores
 .ipynb_checkpoints
 environment.sh
+
+#The following files must be submitted by the user since they are not included
+#in the repo
 config.yaml
+.pgpass
 
 #### github defaults below
 
