--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 conda==3.19.0
 conda-env==2.4.5
 csvkit==0.9.1
+cycler==0.9.0
 dbf==0.96.3
 enum34==1.1.1
 lxml==3.5.0
+matplotlib==1.5.0
 numpy==1.10.2
 openpyxl==1.8.5
 pandas==0.17.1
 psycopg2==2.6.1
 pycosat==0.6.1
 pycrypto==2.6.1
+pyparsing==2.0.3
 python-dateutil==2.4.2
+python-ds-tools==0.1
 pytz==2015.7
 PyYAML==3.11
 requests==2.9.0
