adds vim gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,13 @@ target/
 .ipynb_checkpoints/
 
 blight_risk_prediction/architecture.png
+#### joe made this: https://goel.io/joe
+
+#####=== Vim ===#####
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
