--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ csvkit==0.9.1
 cycler==0.9.0
 dbf==0.96.3
 enum34==1.1.1
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.8
 lxml==3.5.0
+MarkupSafe==0.23
 matplotlib==1.5.0
 numpy==1.10.2
 openpyxl==1.8.5
@@ -14,6 +18,7 @@ pycosat==0.6.1
 pycrypto==2.6.1
 pyparsing==2.0.3
 python-dateutil==2.4.2
+python-ds-tools==0.1
 pytz==2015.7
 PyYAML==3.11
 requests==2.9.0
@@ -22,6 +27,7 @@ scipy==0.16.1
 shyaml==0.3.4
 six==1.10.0
 SQLAlchemy==1.0.10
+Werkzeug==0.11.3
 wheel==0.26.0
 xlrd==0.9.4
 xlsx2csv==0.7.2
