exposes port on dockerfile and changes models to train in yaml

--- a/default.yaml
+++ b/default.yaml
@@ -109,15 +109,15 @@ features:
 model: 'RandomForest'
 
 ## Hyperparameters
-#parameters:  # ranges for RandomForest
-#    n_estimators:  [1, 10, 25, 50, 100]
-#    depth: [3, 5, 10, 20]
-#    max_features: [2, 4, 8, 16, "auto"]
-#    criterion: ["gini", "entropy"]
+parameters:  # ranges for RandomForest
+    n_estimators:  [1, 10, 25, 50, 100]
+    depth: [3, 5, 10, 20]
+    max_features: [2, 4, 8, 16, "auto"]
+    criterion: ["gini", "entropy"]
 
-parameters:  # single parameters for RandomForest
-    n_estimators:  [100]
-    depth: [10]
+#parameters:  # single parameters for RandomForest
+#    n_estimators:  [100]
+#    depth: [10]
 
 #parameters:   #SVM
 #    C_reg: [100.0]  # C regularization parameter
