--- a/default.yaml
+++ b/default.yaml
@@ -24,11 +24,11 @@ residential_only: True
 #Syntax is used in a LIKE statement
 features:
     #All columns on crime table
-    - crime.%
+    #- crime.%
     #single family column on house type
-    - house_type.single-family
+    #- house_type.single-family
     #columns starting with rate in the census_2010 table
-    - census_2010.rate2_%
+    - census_2010.rate_%
 
 ############################
 # Model selection          #
