--- a/default.yaml
+++ b/default.yaml
@@ -20,14 +20,12 @@ residential_only: True
 # Feature selection        #
 ############################
 
-#New syntax for feature selection
-#Syntax is used in a LIKE statement
+#List features to use, follow syntax table.column where column
+#is used in a LIKE statement
+#http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
-    #All columns on crime table
     #- crime.%
-    #single family column on house type
     #- house_type.single-family
-    #columns starting with rate in the census_2010 table
     - census_2010.rate_%
 
 ############################
@@ -35,6 +33,7 @@ features:
 ############################
 
 #See grid_values.py for supported models
+#Use valid scikit-learn classes, provide the full path to the class
 model: 'sklearn.ensemble.RandomForestClassifier'
 
 ############################
