dumps predictions instead of saving them to mongo

--- a/default.yaml
+++ b/default.yaml
@@ -24,8 +24,8 @@ residential_only: True
 #is used in a LIKE statement
 #http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
-    #- crime.%
-    #- house_type.single-family
+    - crime.%
+    - house_type.single-family
     - census_2010.rate_%
 
 ############################
