--- a/default.yaml
+++ b/default.yaml
@@ -25,8 +25,8 @@ residential_only: True
 #http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
     #- crime.%
-    #- house_type.single-family
-    - census_2010.rate_%
+    - house_type.single-family
+    #- census_2010.rate_%
 
 ############################
 # Model selection          #
