removes references to blight risk pred as package in model.py

--- a/default.yaml
+++ b/default.yaml
@@ -5,7 +5,7 @@
 
 # Temporal stuff
 start_date: '01Jan2012'    #train only on inspections after this date
-fake_today: '01Apr2014'
+fake_today: '31Dic2013'
 validation_window: '1Year'  # Or '1Month'
 
 # Generate full parcel predictions for Cincinnati
@@ -24,8 +24,9 @@ residential_only: True
 #is used in a LIKE statement
 #http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
-    #- crime.%
+    - crime.%
     #- three11.%
+    - fire.%
     - tax.%
     #- house_type.single-family
     #- census_2010.rate_%
@@ -52,4 +53,4 @@ grid_size: 'small' #small, medium or big
 #in both case is optional. If you are using mongo, this will just simpy add a new
 #key, this is useful for comments. If you are pickling results, this will be a prefix
 #in your pkl files
-experiment_name: 'testing'
+experiment_name: 'testing fire'
