removes reference to config in dataset.py

--- a/default.yaml
+++ b/default.yaml
@@ -5,7 +5,7 @@
 
 # Temporal stuff
 start_date: '01Jan2012'    #train only on inspections after this date
-fake_today: '31Dic2013'
+fake_today: '31Dec2013'
 validation_window: '1Year'  # Or '1Month'
 
 # Generate full parcel predictions for Cincinnati
