--- a/logger_config.yaml
+++ b/logger_config.yaml
@@ -1,3 +1,17 @@
 version: 1
+formatters:
+    simple:
+        class: !!python/name:logging.Formatter
+        format: '%(name)s %(asctime)s %(levelname)s %(message)s'
+        datefmt: '%d/%m/%Y %H:%M:%S'
+
+handlers:
+    console:
+        class: logging.StreamHandler
+        level: DEBUG
+        formatter: simple
+        stream: ext://sys.stdout
+
 root:
     level: DEBUG
+    handlers: [console]
