--- a/experiments/freq_features_2years.yaml
+++ b/experiments/freq_features_2years.yaml
@@ -3,9 +3,6 @@
 #                      Model Experiments                         #
 ##################################################################
 
-#This file trains on the period for which we have the most
-#data available which starting from Jan 2012 to Dec 2014
-
 # Temporal stuff
 start_date: '01Jan2012'    #train only on inspections after this date
 fake_today: '31Dec2013'
@@ -28,17 +25,15 @@ residential_only: True
 #http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
     #Spatio temporal features from the fire dataset
-    - fire_1000m_3months.total
+    - fire_700m_6months.total
     #Spatiotemporal features form the crime dataset
-    - crime_1000m_3months.total
+    - crime_700m_6months.total
     #Crime aggregation features: crime rate 1, 3 years
     - crime_agg.%
     #Tax aggregation features with home values and years in foreclosure
     - tax.%
-    #Spatio temporal features from the 311 dataset
-    - three11_1000m_3months.total
-    #Spatio temporal features from the permits data
-    - permits_1000m_3months.total
+    #Spatio temporal features from the sales dataset
+    - sales_700m_6months.total
     #Census aggregation features: housing density, rates per household
     - census_2010.%
     #Named entities: count of years in a given period of time that the
@@ -50,6 +45,7 @@ features:
     - parc_year.%
     #dummy varirable - Type of home: single family, multi family
     - house_type.%
+
 
 ############################
 # Model selection          #
@@ -67,7 +63,7 @@ models:
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
-grid_size: 'small' #small, medium or big
+grid_size: 'big' #small, medium or big
 
 ############################
 # Experiment name          #
@@ -77,4 +73,4 @@ grid_size: 'small' #small, medium or big
 #in both case is optional. If you are using mongo, this will just simpy add a new
 #key, this is useful for comments. If you are pickling results, this will be a prefix
 #in your pkl files
-experiment_name: 'small grid. most data. all features. 2 years training. 1 year validation.'
+experiment_name: 'freq_features_2years'
