--- a/experiments/freq_features_4years.yaml
+++ b/experiments/freq_features_4years.yaml
@@ -35,7 +35,7 @@ features:
     #Spatio temporal features from the sales dataset
     - sales_700m_6months.total
     #Census aggregation features: housing density, rates per household
-    - census_2010.%
+    - census_2010.rate_%
     #Named entities: count of years in a given period of time that the
     #was owned by a person, government institution or company
     - names_entities.%
