--- a/experiments/all_freq_features_1000m_9months.yaml
+++ b/experiments/all_freq_features_1000m_9months.yaml
@@ -60,12 +60,12 @@ features:
 #See grid_values.py for supported models
 #Use valid scikit-learn classes, provide the full path to the class
 models:
-  - 'sklearn.ensemble.AdaBoostClassifier'
+ # - 'sklearn.ensemble.AdaBoostClassifier'
   - 'sklearn.ensemble.RandomForestClassifier'
   - 'sklearn.ensemble.ExtraTreesClassifier'
-  - 'sklearn.ensemble.GradientBoostingClassifier'
-  - 'sklearn.linear_model.LogisticRegression'
-  - 'sklearn.svm.SVC'
+  #- 'sklearn.ensemble.GradientBoostingClassifier'
+  #- 'sklearn.linear_model.LogisticRegression'
+  #- 'sklearn.svm.SVC'
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
