--- a/experiments/kdd/freq_features_3years.yaml
+++ b/experiments/kdd/freq_features_3years.yaml
@@ -3,11 +3,8 @@
 #                      Model Experiments                         #
 ##################################################################
 
-#This file trains on the period for which we have the most
-#data available which starting from Jan 2012 to Dec 2014
-
 # Temporal stuff
-start_date: '01Jan2012'    #train only on inspections after this date
+start_date: '01Jan2011'    #train only on inspections after this date
 fake_today: '31Dec2013'
 validation_window: '1Year'  # Or '1Month'
 
@@ -28,19 +25,15 @@ residential_only: True
 #http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
     #Spatio temporal features from the fire dataset
-    - fire_1000m_9months.total
+    - fire_700m_6months.total
     #Spatiotemporal features form the crime dataset
-    - crime_1000m_9months.total
+    - crime_700m_6months.total
     #Crime aggregation features: crime rate 1, 3 years
     - crime_agg.%
     #Tax aggregation features with home values and years in foreclosure
     - tax.%
-    #Spatio temporal features from the 311 dataset
-    - three11_1000m_9months.total
     #Spatio temporal features from the sales dataset
-    - sales_1000m_9months.total
-    #Spatio temporal features from the permits data
-    - permits_1000m_9months.total
+    - sales_700m_6months.total
     #Census aggregation features: housing density, rates per household
     - census_2010.rate_%
     #Named entities: count of years in a given period of time that the
@@ -53,6 +46,7 @@ features:
     #dummy varirable - Type of home: single family, multi family
     - house_type.%
 
+
 ############################
 # Model selection          #
 ############################
@@ -60,12 +54,12 @@ features:
 #See grid_values.py for supported models
 #Use valid scikit-learn classes, provide the full path to the class
 models:
- # - 'sklearn.ensemble.AdaBoostClassifier'
+  - 'sklearn.ensemble.AdaBoostClassifier'
   - 'sklearn.ensemble.RandomForestClassifier'
   - 'sklearn.ensemble.ExtraTreesClassifier'
-  #- 'sklearn.ensemble.GradientBoostingClassifier'
-  #- 'sklearn.linear_model.LogisticRegression'
-  #- 'sklearn.svm.SVC'
+  - 'sklearn.ensemble.GradientBoostingClassifier'
+  - 'sklearn.linear_model.LogisticRegression'
+  - 'sklearn.svm.SVC'
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
@@ -79,4 +73,4 @@ grid_size: 'big' #small, medium or big
 #in both case is optional. If you are using mongo, this will just simpy add a new
 #key, this is useful for comments. If you are pickling results, this will be a prefix
 #in your pkl files
-experiment_name: 'all_freq_features_1000m_9months'
+experiment_name: 'freq_features_3years'
