--- a/experiments/kdd/freq_features_4years.yaml
+++ b/experiments/kdd/freq_features_4years.yaml
@@ -4,7 +4,7 @@
 ##################################################################
 
 # Temporal stuff
-start_date: '01Jan2013'    #train only on inspections after this date
+start_date: '01Jan2010'    #train only on inspections after this date
 fake_today: '31Dec2013'
 validation_window: '1Year'  # Or '1Month'
 
@@ -46,6 +46,7 @@ features:
     #dummy varirable - Type of home: single family, multi family
     - house_type.%
 
+
 ############################
 # Model selection          #
 ############################
@@ -53,16 +54,16 @@ features:
 #See grid_values.py for supported models
 #Use valid scikit-learn classes, provide the full path to the class
 models:
- # - 'sklearn.ensemble.AdaBoostClassifier'
+  - 'sklearn.ensemble.AdaBoostClassifier'
   - 'sklearn.ensemble.RandomForestClassifier'
-  #- 'sklearn.ensemble.ExtraTreesClassifier'
-  #- 'sklearn.ensemble.GradientBoostingClassifier'
-  #- 'sklearn.linear_model.LogisticRegression'
-  #- 'sklearn.svm.SVC'
+  - 'sklearn.ensemble.ExtraTreesClassifier'
+  - 'sklearn.ensemble.GradientBoostingClassifier'
+  - 'sklearn.linear_model.LogisticRegression'
+  - 'sklearn.svm.SVC'
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
-grid_size: 'small' #small, medium or big
+grid_size: 'big' #small, medium or big
 
 ############################
 # Experiment name          #
@@ -72,4 +73,4 @@ grid_size: 'small' #small, medium or big
 #in both case is optional. If you are using mongo, this will just simpy add a new
 #key, this is useful for comments. If you are pickling results, this will be a prefix
 #in your pkl files
-experiment_name: 'freq_features_1years'
+experiment_name: 'freq_features_4years'
