--- a/experiments/kdd/freq_features_5years.yaml
+++ b/experiments/kdd/freq_features_5years.yaml
@@ -56,13 +56,10 @@ models:
   - 'sklearn.ensemble.AdaBoostClassifier'
   - 'sklearn.ensemble.RandomForestClassifier'
   - 'sklearn.ensemble.ExtraTreesClassifier'
-  - 'sklearn.ensemble.GradientBoostingClassifier'
-  - 'sklearn.linear_model.LogisticRegression'
-  - 'sklearn.svm.SVC'
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
-grid_size: 'small' #small, medium or big
+grid_size: 'big' #small, medium or big
 
 ############################
 # Experiment name          #
