--- a/experiments/kdd/all_freq_features_400m_3months.yaml
+++ b/experiments/kdd/all_freq_features_400m_3months.yaml
@@ -66,7 +66,7 @@ models:
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
-grid_size: 'big' #small, medium or big
+grid_size: 'single'
 
 ############################
 # Experiment name          #
