--- a/experiments/kdd/all_freq_features_400m_6months.yaml
+++ b/experiments/kdd/all_freq_features_400m_6months.yaml
@@ -60,7 +60,7 @@ features:
 #See grid_values.py for supported models
 #Use valid scikit-learn classes, provide the full path to the class
 models:
-  - 'sklearn.ensemble.AdaBoostClassifier'
+  #- 'sklearn.ensemble.AdaBoostClassifier'
   - 'sklearn.ensemble.RandomForestClassifier'
   - 'sklearn.ensemble.ExtraTreesClassifier'
 
