--- a/experiments/kdd/freq_features_3years.yaml
+++ b/experiments/kdd/freq_features_3years.yaml
@@ -58,7 +58,7 @@ models:
 
 #For each model you select, the pipeline will
 #train a bunch of models, see grid_values for more
-grid_size: 'single'
+grid_size: 'big'
 
 ############################
 # Experiment name          #
