--- a/experiments/kdd/all_freq_features_400m_6months.yaml
+++ b/experiments/kdd/all_freq_features_400m_6months.yaml
@@ -36,7 +36,7 @@ features:
     #Tax aggregation features with home values and years in foreclosure
     - tax.%
     #Spatio temporal features from the 311 dataset
-    - three11_400m_6months.total
+    #- three11_400m_6months.total
     #Spatio temporal features from the sales dataset
     - sales_400m_6months.total
     #Spatio temporal features from the permits data
@@ -74,4 +74,4 @@ grid_size: 'big'
 #in both case is optional. If you are using mongo, this will just simpy add a new
 #key, this is useful for comments. If you are pickling results, this will be a prefix
 #in your pkl files
-experiment_name: 'all_freq_features_400m_6months'
+experiment_name: 'all_freq_features_400m_6months_no_three11'
