--- a/environment.yml
+++ b/environment.yml
@@ -1,45 +1,77 @@
 name: cincinnati
 dependencies:
+- backports_abc=0.4=py27_0
 - cairo=1.12.18=4
-- fontconfig=2.11.1=4
-- freetype=2.5.2=2
+- decorator=4.0.9=py27_0
+- fontconfig=2.11.1=5
+- freetype=2.5.5=0
+- ipykernel=4.2.2=py27_0
+- ipython=4.1.1=py27_0
+- ipython_genutils=0.1.0=py27_0
+- ipywidgets=4.1.1=py27_0
+- jinja2=2.8=py27_0
+- jsonschema=2.4.0=py27_0
+- jupyter=1.0.0=py27_1
+- jupyter_client=4.1.1=py27_0
+- jupyter_console=4.1.0=py27_0
+- jupyter_core=4.0.6=py27_0
 - libgfortran=1.0=0
 - libpng=1.6.17=0
+- libsodium=1.0.3=0
 - libxml2=2.9.2=0
+- markupsafe=0.23=py27_0
 - matplotlib=1.4.3=np19py27_2
+- mistune=0.7.1=py27_0
+- nbconvert=4.1.0=py27_0
+- nbformat=4.0.1=py27_0
 - nose=1.3.7=py27_0
+- notebook=4.1.0=py27_0
 - numpy=1.10.2=py27_0
 - openblas=0.2.14=3
-- openssl=1.0.2e=0
+- openssl=1.0.2f=0
 - pandas=0.17.1=np110py27_0
+- path.py=8.1.2=py27_1
 - pep8=1.6.2=py27_0
-- pip=8.0.1=py27_0
+- pexpect=3.3=py27_0
+- pickleshare=0.5=py27_0
+- pip=8.0.2=py27_0
 - pixman=0.26.2=0
 - psycopg2=2.6=py27_1
+- ptyprocess=0.5=py27_0
 - py2cairo=1.10.0=py27_2
+- pygments=2.1.1=py27_0
 - pyparsing=2.0.3=py27_0
-- pyqt=4.11.3=py27_1
+- pyqt=4.11.4=py27_1
 - python=2.7.11=0
 - python-dateutil=2.4.2=py27_0
 - pytz=2015.7=py27_0
 - pyyaml=3.11=py27_1
-- qt=4.8.6=3
+- pyzmq=15.2.0=py27_0
+- qt=4.8.7=1
+- qtconsole=4.1.1=py27_0
 - readline=6.2=2
 - scikit-learn=0.16.1=np19py27_0
 - scipy=0.16.0=np19py27_0
-- setuptools=19.4=py27_0
-- sip=4.16.5=py27_0
+- setuptools=20.1.1=py27_0
+- simplegeneric=0.8.1=py27_0
+- singledispatch=3.4.0.3=py27_0
+- sip=4.16.9=py27_0
 - six=1.10.0=py27_0
 - sqlalchemy=1.0.8=py27_0
 - sqlite=3.9.2=0
+- ssl_match_hostname=3.4.0.2=py27_0
 - system=5.8=2
+- terminado=0.5=py27_1
 - tk=8.5.18=0
-- wheel=0.26.0=py27_1
+- tornado=4.3=py27_0
+- traitlets=4.1.0=py27_0
+- wheel=0.29.0=py27_0
 - yaml=0.1.6=0
+- zeromq=4.1.3=0
 - zlib=1.2.8=0
 - pip:
   - backports-abc==0.4
-  - backports.ssl-match-hostname==3.5.0.1
+  - backports.ssl-match-hostname==3.4.0.2
   - certifi==2015.11.20.1
   - click==6.2
   - click-plugins==1.0.3
@@ -47,63 +79,32 @@ dependencies:
   - csvkit==0.9.1
   - datashape==0.5.0
   - dbf==0.94.3
-  - decorator==4.0.6
-  - descartes==1.0.1
   - dstools==0.3
-  - engarde==0.3.1
-  - fiona==1.6.3
   - flask==0.10.1
   - funcsigs==0.4
   - functools32==3.2.3.post2
-  - geopandas==0.1.1
   - gevent==1.0.2
   - greenlet==0.4.9
   - grequests==0.2.0
-  - ipykernel==4.2.2
-  - ipython==4.0.1
   - ipython-genutils==0.1.0
-  - ipywidgets==4.1.1
   - itsdangerous==0.24
   - jdcal==1.2
-  - jinja2==2.8
-  - jsonschema==2.5.1
-  - jupyter==1.0.0
-  - jupyter-client==4.1.1
-  - jupyter-console==4.1.0
-  - jupyter-core==4.0.6
-  - markupsafe==0.23
-  - mistune==0.7.1
   - mock==1.3.0
   - multipledispatch==0.4.8
-  - nbconvert==4.1.0
-  - nbformat==4.0.1
   - networkx==1.10
-  - notebook==4.1.0
   - openpyxl==2.2.0b1
-  - path.py==8.1.2
   - pbr==1.8.1
-  - pexpect==4.0.1
-  - pickleshare==0.5
-  - ptyprocess==0.5
   - pyaml==15.8.2
-  - pygments==2.0.2
   - pymongo==3.2
   - pyproj==1.9.5.1
-  - pyzmq==15.2.0
-  - qtconsole==4.1.1
   - requests==2.9.1
   - seaborn==0.7.0
-  - shapely==1.5.13
   - shyaml==0.3.4
-  - simplegeneric==0.8.1
-  - singledispatch==3.4.0.3
   - sklearn==0.0
   - sklearn-evaluation==0.14
   - tabulate==0.7.5
-  - terminado==0.6
   - toolz==0.7.4
-  - tornado==4.3
-  - traitlets==4.0.0
   - werkzeug==0.11.3
   - xlrd==0.9.4
   - xlsx2csv==0.7.2
+
