--- a/blight_risk_prediction/experiments/spring-2016-list/all_freq_features_50m_3months_12_13.yaml
+++ b/blight_risk_prediction/experiments/spring-2016-list/all_freq_features_50m_3months_12_13.yaml
@@ -11,11 +11,6 @@ start_date: '01Jan2012'    #train only on inspections after this date
 fake_today: '31Dec2013'
 validation_window: '1Year'  # Or '1Month'
 
-# Generate full parcel predictions for Cincinnati
-# Turn on after model validation/evaluation is complete
-prepare_field_test: False
-inspection_date: '01Aug2015'
-
 # only use residential parcels
 residential_only: True
 
@@ -27,74 +22,20 @@ residential_only: True
 #is used in a LIKE statement
 #http://www.postgresql.org/docs/current/static/functions-matching.html
 features:
-    #50 m
+    #Spatio temporal features from the fire dataset
     - fire_50m_3months.total
+    #Spatiotemporal features form the crime dataset
     - crime_50m_3months.total
-    - three11_50m_3months.total
-    - sales_50m_3months.total
-    - permits_50m_3months.total
-    - fire_50m_6months.total
-    - crime_50m_6months.total
-    - three11_50m_6months.total
-    - sales_50m_6months.total
-    - permits_50m_6months.total
-    - fire_50m_9months.total
-    - crime_50m_9months.total
-    - three11_50m_9months.total
-    - sales_50m_9months.total
-    - permits_50m_9months.total
-    #400 m
-    - fire_400m_3months.total
-    - crime_400m_3months.total
-    - three11_400m_3months.total
-    - sales_400m_3months.total
-    - permits_400m_3months.total
-    - fire_400m_6months.total
-    - crime_400m_6months.total
-    - three11_400m_6months.total
-    - sales_400m_6months.total
-    - permits_400m_6months.total
-    - fire_400m_9months.total
-    - crime_400m_9months.total
-    - three11_400m_9months.total
-    - sales_400m_9months.total
-    - permits_400m_9months.total
-    #700 m
-    - fire_700m_3months.total
-    - crime_700m_3months.total
-    - three11_700m_3months.total
-    - sales_700m_3months.total
-    - permits_700m_3months.total
-    - fire_700m_6months.total
-    - crime_700m_6months.total
-    - three11_700m_6months.total
-    - sales_700m_6months.total
-    - permits_700m_6months.total
-    - fire_700m_9months.total
-    - crime_700m_9months.total
-    - three11_700m_9months.total
-    - sales_700m_9months.total
-    - permits_700m_9months.total
-    #1000 m
-    - fire_1000m_3months.total
-    - crime_1000m_3months.total
-    - three11_1000m_3months.total
-    - sales_1000m_3months.total
-    - permits_1000m_3months.total
-    - fire_1000m_6months.total
-    - crime_1000m_6months.total
-    - three11_1000m_6months.total
-    - sales_1000m_6months.total
-    - permits_1000m_6months.total
-    - fire_1000m_9months.total
-    - crime_1000m_9months.total
-    - three11_1000m_9months.total
-    - sales_1000m_9months.total
-    - permits_1000m_9months.total
     #Crime aggregation features: crime rate 1, 3 years
     - crime_agg.%
     #Tax aggregation features with home values and years in foreclosure
     - tax.%
+    #Spatio temporal features from the 311 dataset
+    - three11_50m_3months.total
+    #Spatio temporal features from the sales dataset
+    - sales_50m_3months.total
+    #Spatio temporal features from the permits data
+    - permits_50m_3months.total
     #Census aggregation features: housing density, rates per household
     - census_2010.rate_%
     #Named entities: count of years in a given period of time that the
@@ -128,4 +69,4 @@ grid_size: 'big'
 #in both case is optional. If you are using mongo, this will just simpy add a new
 #key, this is useful for comments. If you are pickling results, this will be a prefix
 #in your pkl files
-experiment_name: 'spring_2016_all_freq_features_all_spatiotemporal_params'
+experiment_name: 'spring_2016_all_freq_features_50m_3months_12_13'
