--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 #### project-local gitignores
 .ipynb_checkpoints
-environment.sh
-
-#The following files must be submitted by the user since they are not included
-#in the repo
+env.sh
 config.yaml
 .pgpass
 
