model now supports None in validation window

--- a/logger_config.yaml
+++ b/logger_config.yaml
@@ -8,10 +8,10 @@ formatters:
 handlers:
     console:
         class: logging.StreamHandler
-        level: INFO
+        level: DEBUG
         formatter: simple
         stream: ext://sys.stdout
 
 root:
-    level: INFO
+    level: DEBUG
     handlers: [console]
