--- a/lib_cinci/data_updater/example.yaml
+++ b/lib_cinci/data_updater/example.yaml
@@ -1,7 +1,10 @@
 source:
-  url: http://open-data.org/dataset.csv
+  #URL is optional. If present, script will download it every time and saved using
+  #filename value. Otherwise, script will load file named as filename value
+  url: https://open-data.org/file.csv
+  filename: data.csv
   column: DATE
 storage:
   schema: public
-  table: dataset
+  table: cool_dataset
   column: date
