--- a/etl/inspections/ora2pg.conf
+++ b/etl/inspections/ora2pg.conf
@@ -20,7 +20,7 @@
 ORACLE_HOME /u01/app/oracle/product/11.2.0/xe
 
 # Set Oracle database connection (datasource, user, password)
-ORACLE_DSN  dbi:Oracle:host=localhost;sid=SIDNAME
+ORACLE_DSN  dbi:Oracle:host=localhost;sid=xe
 ORACLE_USER system
 ORACLE_PWD  oracle
 
