changes ora2pg.conf to avoid automatic conversion to bigint

--- a/etl/inspections/ora2pg.conf
+++ b/etl/inspections/ora2pg.conf
@@ -440,7 +440,7 @@ PG_INTEGER_TYPE 1
 # NUMBER() without precision are converted by default to bigint only if
 # PG_INTEGER_TYPE is true. You can overwrite this value to any PG type,
 # like integer or float.
-DEFAULT_NUMERIC bigint
+DEFAULT_NUMERIC float4
 
 # Set it to 0 if you don't want to export milliseconds from Oracle timestamp
 # columns. Timestamp will be formated with to_char(..., 'YYYY-MM-DD HH24:MI:SS')
