missing not in update.py

--- a/etl/permits/update.yaml
+++ b/etl/permits/update.yaml
@@ -1,6 +1,6 @@
 source:
   filename: permits.csv
-  url: https://data.cincinnati-oh.gov/api/views/uhjb-xac9/rows.csv?accessType=DOWNLOAD
+  #url: https://data.cincinnati-oh.gov/api/views/uhjb-xac9/rows.csv?accessType=DOWNLOAD
   column: ISSUEDDATE
 storage:
   schema: public
