--- a/environment.yml
+++ b/environment.yml
@@ -2,43 +2,57 @@ name: cincinnati
 dependencies:
 - backports_abc=0.4=py27_0
 - cairo=1.12.18=4
+- cycler=0.10.0=py27_0
+- dbus=1.10.10=0
 - decorator=4.0.9=py27_0
+- expat=2.1.0=0
 - fontconfig=2.11.1=5
 - freetype=2.5.5=0
+- glib=2.43.0=1
+- gst-plugins-base=1.8.0=0
+- gstreamer=1.8.0=0
+- icu=54.1=0
 - ipykernel=4.2.2=py27_0
 - ipython=4.1.1=py27_0
 - ipython_genutils=0.1.0=py27_0
 - ipywidgets=4.1.1=py27_0
 - jinja2=2.8=py27_0
+- jpeg=8d=2
 - jsonschema=2.4.0=py27_0
 - jupyter=1.0.0=py27_1
 - jupyter_client=4.1.1=py27_0
 - jupyter_console=4.1.0=py27_0
 - jupyter_core=4.0.6=py27_0
+- libffi=3.2.1=0
+- libgcc=5.2.0=0
 - libgfortran=1.0=0
 - libpng=1.6.17=0
+- libpq=9.5.4=0
 - libsodium=1.0.3=0
+- libxcb=1.12=0
 - libxml2=2.9.2=0
 - markupsafe=0.23=py27_0
-- matplotlib=1.4.3=np19py27_2
+- matplotlib=1.5.1=np110py27_0
 - mistune=0.7.1=py27_0
+- mkl=11.3.1=0
 - nbconvert=4.1.0=py27_0
 - nbformat=4.0.1=py27_0
 - nose=1.3.7=py27_0
 - notebook=4.1.0=py27_0
-- numpy=1.10.2=py27_0
+- numpy=1.10.4=py27_1
 - openblas=0.2.14=3
 - openssl=1.0.2f=0
-- pandas=0.17.1=np110py27_0
+- pandas=0.18.1=np110py27_0
 - path.py=8.1.2=py27_1
 - pep8=1.6.2=py27_0
 - pexpect=3.3=py27_0
 - pickleshare=0.5=py27_0
 - pip=8.0.2=py27_0
 - pixman=0.26.2=0
-- psycopg2=2.6=py27_1
+- psycopg2=2.6.2=py27_0
 - ptyprocess=0.5=py27_0
 - py2cairo=1.10.0=py27_2
+- pycairo=1.10.0=py27_0
 - pygments=2.1.1=py27_0
 - pyparsing=2.0.3=py27_0
 - pyqt=4.11.4=py27_1
@@ -50,8 +64,8 @@ dependencies:
 - qt=4.8.7=1
 - qtconsole=4.1.1=py27_0
 - readline=6.2=2
-- scikit-learn=0.16.1=np19py27_0
-- scipy=0.16.0=np19py27_0
+- scikit-learn=0.17.1=np110py27_0
+- scipy=0.17.0=np110py27_1
 - setuptools=20.1.1=py27_0
 - simplegeneric=0.8.1=py27_0
 - singledispatch=3.4.0.3=py27_0
