--- a/post-modeling/model_exploration/requirements.txt
+++ b/post-modeling/model_exploration/requirements.txt
@@ -1,12 +1,20 @@
+PyYAML==3.12
+SQLAlchemy==1.1.6
+argparse==1.2.1
+cycler==0.10.0
+functools32==3.2.3-2
+matplotlib==2.0.0
 numpy==1.12.1
 pandas==0.19.2
 psycopg2==2.7.1
 pymongo==3.4.0
+pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2016.10
-PyYAML==3.12
 pyzmq==16.0.2
+scikit-learn==0.17
 scipy==0.19.0
-scikit-learn==0.18.1
+seaborn==0.7.1
 six==1.10.0
-SQLAlchemy==1.1.6
+subprocess32==3.2.7
+wsgiref==0.1.2
