--- a/logger_config_sample.yaml
+++ b/logger_config_sample.yaml
@@ -11,7 +11,11 @@ handlers:
         level: INFO
         formatter: simple
         stream: ext://sys.stdout
-
+    logfile:
+      class: logging.FileHandler
+      filename: cinci.log
+      formatter: simple
+      level: INFO
 root:
     level: INFO
-    handlers: [console]
+    handlers: [console, logfile]
